--- a/index.html
+++ b/index.html
@@ -51,12 +51,18 @@
         </div>
     </section>
 
+<section id="search-history">
+<ul id="history-list">
+
+</ul>
+</section>
+
     
 
 
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcoIUvwmFIl9S54IsKszdFj6V0EQRPDH0&libraries=places"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="module" src="./assets/js/index.js"></script>
-    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcoIUvwmFIl9S54IsKszdFj6V0EQRPDH0&libraries=places"></script> -->
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCn7Q43VrRhRhefia3wZ1_6x0rojYjMzeo&callback=initMap"></script> -->
 
 </body>
 </html>
